Bug 1729480 - Make `keypress` event listener of editor and `execCommand` related methods access editor instance after flushing pending layout r=emilio,smaug

I have no idea how to make the test result stable because the intermittent
failure is caused by a race of `IMEContentObserver`'s content query performend
at vsync and `keypress` event after the `keydown` event.  Therefore, I try to
fix the root cause of the failure.

There are two paths reaching a public method of editor with pending
notifications.  One is `keypress` event listener of the editor.  The other is
`execCommand` related methods of `Document`.  Therefore, we should make them
flush pending notifications before accessing editor, but the cost may be too
expensive.  So we should consider whether we should flush pending notifications
or not as far as later.

Note that we cannot fix the `beforeinput` cases because flushing pending
notifications after dispatching `beforeinput` event may cause oranges.  It'll
be fixed while I'm working on bug 1710784.

Differential Revision: https://phabricator.services.mozilla.com/D125805